@@ -48,14 +48,15 @@ public class GroupMatcher {
 
   public List<String> getAllMatchingGroups(List<CombineItem> matchingItems) {
     return getAllMatchingGroups(
-        matchingItems.stream().map(CombineItem::getGroups).flatMap(Collection::stream).collect(
-            Collectors.toSet()));
+        matchingItems.stream()
+            .map(CombineItem::getGroups)
+            .flatMap(Collection::stream)
+            .collect(Collectors.toSet()));
   }
 
   public List<String> getAllMatchingGroups(Set<String> groups) {
     MatchStrategy strategy = getStrategy();
-    return groups.stream().filter(e -> strategy.match(Set.of(e)).equals(MATCHING))
-        .collect(Collectors.toList());
+    return groups.stream().filter(e -> strategy.match(Set.of(e)).equals(MATCHING)).toList();
   }
 
   public List<CombineItem> getAllItemsMatching(List<CombineItem> allItems) {
@@ -65,19 +66,13 @@ public class GroupMatcher {
   }
 
   private MatchStrategy getStrategy() {
-    switch (strategyType) {
-      case CASE_INSENSITIVE:
-        return new CaseInsensitiveStrategy(groups);
-      case CASE_INSENSITIVE_EXACT:
-        return new CaseInsensitiveExactStrategy(groups);
-      case CASE_SENSITIVE:
-        return new CaseSensitiveStrategy(groups);
-      case CASE_SENSITIVE_EXACT:
-        return new CaseSensitiveExactStrategy(groups);
-      case REGEX:
-        return new RegexStrategy(groups);
-      default:
-        return new WildcardStrategy(groups);
-    }
+    return switch (strategyType) {
+      case CASE_INSENSITIVE -> new CaseInsensitiveStrategy(groups);
+      case CASE_INSENSITIVE_EXACT -> new CaseInsensitiveExactStrategy(groups);
+      case CASE_SENSITIVE -> new CaseSensitiveStrategy(groups);
+      case CASE_SENSITIVE_EXACT -> new CaseSensitiveExactStrategy(groups);
+      case REGEX -> new RegexStrategy(groups);
+      default -> new WildcardStrategy(groups);
+    };
   }
 }
