@@ -17,17 +17,15 @@
 package de.gematik.prepare.pooling.strategies;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CaseInsensitiveStrategy extends MatchStrategy {
 
   public CaseInsensitiveStrategy(List<String> groups) {
-    super(groups.stream().map(String::toLowerCase).collect(Collectors.toList()));
+    super(groups.stream().map(String::toLowerCase).toList());
   }
 
   @Override
   protected boolean doesMatch(String group) {
     return this.pattern.stream().anyMatch(e -> group.toLowerCase().contains(e));
   }
-
 }
